NEXT-16 - corrected flickering

--- a/src/ui/common/components/layout/TopHeader/topHeader.module.scss
+++ b/src/ui/common/components/layout/TopHeader/topHeader.module.scss
@@ -8,6 +8,8 @@
 }
 
 .headerContainer {
+  min-height: 24px;
+
   &::before {
     background: linear-gradient(
       to right,
